# ICCBDProject2025

./: README.md
ICCBDProjectMerged/: docker-compose.yml
ICCBDProjectMerged/acid_implJS/: Dockerfile  docker-compose.yml  init-postgres.sql  nginx.conf  package.json  server.js
ICCBDProjectMerged/acid_implJS/scripts/: k6-script.js
ICCBDProjectMerged/base_implJS/: docker-compose.yml  init-mongo.js  nginx.conf  package.json
ICCBDProjectMerged/monitoring/: prometheus.yml
WSOtelJS/: Dockerfile  README.md  docker-compose.yml  package.json  prometheus.yml  server.js
WebserverOpenTelemetry/: CMakeLists.txt  Dockerfile  README.md  WebServer.cpp  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
acid_implJS/: docker-compose.yml  nginx.conf  prometheus.yml  server.js
acid_implJS/grafana/dashboards/: acid-dashboard.json
acid_implJS/scripts/: k6-script.js
base_implJS/: Dockerfile  docker-compose.yml  server.js
base_implJS/grafana/dashboards/: grafana-dashboard.json
base_implJS/grafana/datasources/: datasources.yml
base_implJS/k6-script.js/: k6-script.js
cloud-continuum-observability/: docker-compose.yml
cloud-continuum-observability/edge-agent/: agent.py
cloud-continuum-observability/loki/: loki-config.yml
cloud-continuum-observability/middleware-gateway/: main.py  requirements.txt
cloud-continuum-observability/middleware-processor/: Dockerfile  processor.py
cloud-continuum-observability/prometheus/: prometheus.yml
cloud-continuum-observability/scripts/: cleanup.sh  test-agents.sh
(+8 files in other folders)
